# contacts-zome

./: README.md  flake.nix  package.json  pnpm-lock.yaml
.github/workflows/: build-and-cache-zomes.yaml  test.yaml
docs/: contacts-store.md  index.md  introduction.md  package.json  setup.md
docs/.vitepress/: config.mts
tests/src/: setup.ts
ui/: package.json
ui/demo/: index.html
ui/src/: contacts-client.ts  contacts-store.ts  context.ts  index.ts  mocks.ts  types.ts
ui/src/elements/: contacts-context.ts
workdir/: dna.nix  dna.yaml  happ.nix  happ.yaml
zomes/coordinator/contacts/: Cargo.toml  zome.nix
zomes/coordinator/contacts/src/: agent_encrypted_message.rs  all_contacts.rs  lib.rs  private_contacts_entry.rs  private_event.rs  profile.rs  share_contact_request.rs  synchronize.rs  utils.rs
zomes/coordinator/private_event_sourcing/src/: agent_encrypted_message.rs  awaiting_dependencies.rs  lib.rs  linked_devices.rs  private_event.rs  synchronize.rs  utils.rs
zomes/integrity/contacts/: Cargo.toml  zome.nix
zomes/integrity/contacts/src/: agent_encrypted_message.rs  lib.rs  private_contacts_entry.rs
zomes/integrity/private_event_sourcing/src/: private_event.rs
