[package]
name = "contacts"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "contacts"

[dependencies]
hdk = { workspace = true }

serde = { workspace = true }

contacts_integrity = { path = "../../integrity/contacts", package = "contacts_integrity" }
linked_devices_types = { git = "https://github.com/darksoil-studio/linked-devices-zome", branch = "main-0.4" }
